force-app/main/default/objects/AR_Aging_Data__c/AR_Aging_Data__c.object-meta.xml
<CustomObject>
    <label>AR Aging Data</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>AR Aging Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Aging Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>