force-app/main/default/objects/AR_Aging_Data__c/fields/Balance_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Balance_Overdue__c</fullName>
    <label>Balance Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>