force-app/main/default/objects/AR_Aging_Data__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR Aging Data</relationshipLabel>
    <relationshipName>AR_Aging_Data</relationshipName>
    <type>Lookup</type>
</CustomField>