force-app/main/default/objects/AR_Aging_Data__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>